道路名作业

--- a/scripts/components/column/tpls/chinaName/nameUnifyTpl.html
+++ b/scripts/components/column/tpls/chinaName/nameUnifyTpl.html
@@ -13,7 +13,7 @@
                     <div class="form-group" ng-repeat="item in costomWorkNumEum">
                         <div class="radio">
                             <label>
-                                <input type="radio" name="selectNum" id="optionsRadios1" ng-checked="editorLines==item.num" ng-click="selectNum(item,$index)"> <span ng-bind="item.desc"></span>
+                                <input type="radio" name="selectNum" id="optionsRadios1" ng-checked="editLines==item.num" ng-click="selectNum(item,$index)"> <span ng-bind="item.desc"></span>
                             </label>
                         </div>
                         <!--自定义输入框部分-->
