--- a/scripts/components/tools/tpls/toolbar-map/specialOperAdvanceToolsTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/specialOperAdvanceToolsTpl.htm
@@ -1,5 +1,5 @@
 <div class="btn-group">
-    <button type="button" class="btn btn-xs btn-shape" ng-controller="specialOperAdvanceToolsCtl" ng-click="workPanelOpenClose()">道路作业</button>
+    <button type="button" class="btn btn-xs btn-shape"  ng-class="{true:'active'}[roadNameBtnOpened]" ng-controller="specialOperAdvanceToolsCtl" ng-click="workPanelOpenClose()">道路作业</button>
     <button type="button" class="btn btn-xs btn-shape">图形作业</button>
     <button type="button" class="btn btn-xs btn-shape">其他</button>
 </div>
