详细车道二级面板中时间段的增加

--- a/scripts/components/road/tpls/attr_lane_tpl/laneInfoTpl.html
+++ b/scripts/components/road/tpls/attr_lane_tpl/laneInfoTpl.html
@@ -46,7 +46,7 @@
                       <label class="date-time-title">车辆时间段</label>
                     </li>
                     <li>
-                        <div ng-include="dateURL" class="muti-date" date-str='{{laneCondition.vehicleTime}}' style="width:100%;"></div>
+                        <div ng-include="dateDoubleURL" class="muti-date" date-str='{{laneCondition.vehicleTime}}' style="width:100%;"></div>
                     </li>
                 </ul>
             </form>
