--- a/scripts/components/column/tpls/chinaAddress/addrSplitTpl.html
+++ b/scripts/components/column/tpls/chinaAddress/addrSplitTpl.html
@@ -11,7 +11,6 @@
 			<div style="clear: both;">
 				<div style="padding: 2px;" class="pull-left">
 					<button type="button" class="btn btn-shape btn-ls" ng-click="">查询</button>
-					<button type="button" class="btn btn-shape btn-ls" ng-click="">选择</button>
 					<button type="button" class="btn btn-shape btn-ls" ng-click="">在线检查</button>
 					<button type="button" class="btn btn-shape btn-ls" ng-click="">批量作业</button>
 					<button type="button" class="btn btn-shape btn-ls" ng-if="workedFlag==2" ng-click="submitData();">提交数据</button>
@@ -67,7 +66,7 @@
 			</div>
 		</div>
 		<!-- 高级搜索 -->
-		<div class="div-float" style="top:80px;left:120px;border-radius:5px;" drag>
+		<!--<div class="div-float" style="top:80px;left:120px;border-radius:5px;" drag>
 			<div class="fm-panel" style="margin:0px;width:330px;">
 				<div class="fm-tab" style="padding:0px;margin: 0px;">
 					<a href="#" class="tab" ng-class="{1:'active'}[batchFlag]" ng-click="batchTabs(1)">&nbsp;&nbsp;替换&nbsp;&nbsp;</a>
@@ -80,7 +79,7 @@
 								<label>字段:</label>
 								<div>
 									<select class="fm-control"  style="width:200px;" ng-model="batchParam.batchField"
-											placeholder_text_single="'--请选择--'"
+											placeholder_text_single="'&#45;&#45;请选择&#45;&#45;'"
 											ng-options="value.id as value.label for value in batchOpt"
 											ng-change="changeField($event, this)">
 									</select>
@@ -108,7 +107,7 @@
 					<button type="button" class="btn btn-main" ng-show="searchBtn" ng-click="searchWork()" style="margin:6px 8px">搜索作业</button>
 				</div>
 			</div>
-		</div>
+		</div>-->
 	</div>
 	<!-- 表格编辑界面 -->
 	<div ng-class="{true:'testView',false:'testViewHiden'}[editPanelIsOpen]">
@@ -307,27 +306,23 @@
 							<table class="table">
 								<tr>
 									<td style="width: 25%;">PID:</td>
-									<td>12345678</td>
-								</tr>
-								<tr>
-									<td>作业员:</td>
-									<td>张三</td>
+									<td>{{showInfo.pid}}</td>
 								</tr>
 								<tr>
 									<td>FID:</td>
-									<td>1111111111111</td>
+									<td>{{showInfo.poiNumber}}</td>
 								</tr>
 								<tr>
 									<td>地域:</td>
-									<td>北京凉山彝族自治州会理县</td>
+									<td>{{showInfo.whole}}</td>
 								</tr>
 								<tr>
 									<td>图符号:</td>
-									<td>898989</td>
+									<td>{{showInfo.meshId}}</td>
 								</tr>
 								<tr>
 									<td>图片:</td>
-									<td>0张</td>
+									<td>{{showInfo.photos.length}}张</td>
 								</tr>
 							</table>
 						</div>
