--- a/scripts/components/column/tpls/chinaAddress/addrSplitTpl.html
+++ b/scripts/components/column/tpls/chinaAddress/addrSplitTpl.html
@@ -215,7 +215,7 @@
 									</li>
 									<li>
 										<label style="width:25%;" class="lable-right">后缀:</label>
-										<div><input type="text" ng-model="rowEditData.subfix" class="table-input edit-input" ></div>
+										<div><input type="text" ng-model="rowEditData.surfix" class="table-input edit-input" ></div>
 									</li>
 									<li>
 										<label style="width:25%;" class="lable-right">附属设施名:</label>
@@ -310,7 +310,7 @@
 								</tr>
 								<tr>
 									<td>FID:</td>
-									<td>{{showInfo.poiNumber}}</td>
+									<td>{{showInfo.poiNum}}</td>
 								</tr>
 								<tr>
 									<td>地域:</td>
