修改地址拼音

--- a/scripts/components/column/tpls/chinaAddress/addrPinyinTpl.html
+++ b/scripts/components/column/tpls/chinaAddress/addrPinyinTpl.html
@@ -154,7 +154,7 @@
 								</tr>
 								<tr>
 									<td>地域:</td>
-									<td>{{showInfo.whole}}</td>
+									<td>{{showInfo.detailArea}}</td>
 								</tr>
 								<tr>
 									<td>图符号:</td>
