--- a/scripts/components/road/tpls/attr_lane_tpl/rdLaneTpl.html
+++ b/scripts/components/road/tpls/attr_lane_tpl/rdLaneTpl.html
@@ -62,7 +62,7 @@
                         <li>
                             <label>车道类型</label>
                             <div>
-                                <select ng-model="laneInfo.laneType"
+                                <select ng-model="laneInfo.laneType" ng-click="changeLaneType();"
                                         ng-options="value.id as value.label for value in laneTypeObj">
                                 </select>
                             </div>
@@ -100,7 +100,56 @@
                 </div>
             </div>
         </form>
-        <form name="detailForm">
+        <form ng-if="laneInfo.laneType == 11">
+            <ul class="fm-ul fm-ul-form">
+                <li>
+                    <label>车道方向</label>
+                    <div>
+                        <label>
+                          <input type="radio" ng-model="laneInfo.conditions[0].direction" value="1" name="laneDirGroup"/> 无
+                        </label>
+                        <label>
+                          <input type="radio" ng-model="laneInfo.conditions[0].direction" value="2" name="laneDirGroup"/> 顺
+                        </label>
+                        <label>
+                          <input type="radio" ng-model="laneInfo.conditions[0].direction" value="3" name="laneDirGroup"/> 逆
+                        </label>
+                    </div>
+                </li>
+                <li>
+                  <label class="date-time-title">车道时间段</label>
+                </li>
+                <li>
+                    <div ng-include="dateURL" class="muti-date" data-type="1" date-str='{{laneInfo.conditions[0].directionTime}}' style="width:100%;"></div>
+                </li>
+                <li>
+                    <div class="date-well full-width">
+                        <div class="date-head">
+                            <label>车辆类型</label>
+                            <div class="pull-right" style="display:inline-flex;color: #fff">
+                                <a style="cursor: pointer;"  ng-click="showPopover($event)">添加</a>
+                                <input  type="checkbox" id="checkallow" ng-model="checkValue" ng-checked="checkValue" ng-click="checkViche()" >允许
+                            </div>
+                        </div>
+                        <div class="date-body full-width">
+                            <div class="date-list col-md-6" ng-repeat="item in carData track by $index">
+                                <div style="color:#ffffff;padding: 5px;" ng-bind="item.label">
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="line"></div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                  <label class="date-time-title">车辆时间段</label>
+                </li>
+                <li data-type="1">
+                    <div ng-include="dateDoubleURL" class="muti-date" data-type="1" date-str='{{laneInfo.conditions[0].vehicleTime}}' style="width:100%;"></div>
+                </li>
+            </ul>
+        </form>
+        <!-- <form name="detailForm">
             <div class="fm-panel">
                 <div class="content">
                     <ul class="list-group list-group-lg m-b-none">
@@ -117,7 +166,7 @@
                     </ul>
                 </div>
             </div>
-        </form>
+        </form> -->
     </div>
     <div ng-class="{'carTypeTip tooltip-container animated-fast':true,'fadeInRight':showLaneSelect,'fadeOutRight':!showLaneSelect}" style="display: none;">
         <div class="pull-left" style="margin-top: -8px;color: #FFF;">第{{laneIndex+1}}车道</div>
@@ -132,6 +181,25 @@
         <div class="form-group fix-time tooltip-slide-well dark scroll-styled">
             <li ng-repeat="item in laneDirectArray" ng-class="{'lane-libs':true,'active':selectLaneActive == item}" ng-click="selectLaneDir(item,$index);">
                 <img ng-src="../../../images/road/1301/1301_0_{{item}}.svg"/>
+            </li>
+        </div>
+        <div class='tooltip-arrow-right'></div>
+    </div>
+    <div class="carTip tooltip-container" style="display: none;">
+        <div class="pull-left" style="margin-top: -8px;color: #FFF;">车辆类型</div>
+        <div class="pull-right" style="margin-top: -10px;">
+            <button type="button" class="close" aria-label="Close" ng-click="showPopover($event);"
+                    style="color: #fff;opacity: 1;margin-top: -4px;margin-right: -8px;">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="clearfix"></div>
+        <div class="line line-date"></div>
+        <div class="form-group fix-time tooltip-slide-well dark scroll-styled" id="carDiv" >
+            <li ng-repeat="item in vehicleOptions" style=" list-style: none;color:#ffffff;">
+                <input tabindex="1" style="float:right;margin-right: 10px" type="checkbox"
+                       ng-checked="item.checked"
+                       ng-click="carSelect(item,$event)"/>{{item.label}}
             </li>
         </div>
         <div class='tooltip-arrow-right'></div>
