--- a/scripts/components/column/tpls/chinaAddress/addrPinyinTpl.html
+++ b/scripts/components/column/tpls/chinaAddress/addrPinyinTpl.html
@@ -11,7 +11,6 @@
 			<div style="clear: both;">
 				<div style="padding: 2px;" class="pull-left">
 					<button type="button" class="btn btn-shape btn-ls" ng-click="">查询</button>
-					<button type="button" class="btn btn-shape btn-ls" ng-click="">选择</button>
 					<button type="button" class="btn btn-shape btn-ls" ng-click="">在线检查</button>
 					<button type="button" class="btn btn-shape btn-ls" ng-click="">批量作业</button>
 					<button type="button" class="btn btn-shape btn-ls" ng-if="workedFlag==2" ng-click="submitData();">提交数据</button>
@@ -147,27 +146,23 @@
 							<table class="table">
 								<tr>
 									<td style="width: 25%;">PID:</td>
-									<td>12345678</td>
-								</tr>
-								<tr>
-									<td>作业员:</td>
-									<td>张三</td>
+									<td>{{showInfo.pid}}</td>
 								</tr>
 								<tr>
 									<td>FID:</td>
-									<td>1111111111111</td>
+									<td>{{showInfo.poiNum}}</td>
 								</tr>
 								<tr>
 									<td>地域:</td>
-									<td>北京凉山彝族自治州会理县</td>
+									<td>{{showInfo.detailArea}}</td>
 								</tr>
 								<tr>
 									<td>图符号:</td>
-									<td>898989</td>
+									<td>{{showInfo.meshId}}</td>
 								</tr>
 								<tr>
 									<td>图片:</td>
-									<td>0张</td>
+									<td>{{showInfo.photos.length}}张</td>
 								</tr>
 							</table>
 						</div>
