完成一体化编辑批处理及修改图符号显示bug

--- a/scripts/components/road/tpls/attr_adminstratives_tpl/adFaceTpl.html
+++ b/scripts/components/road/tpls/attr_adminstratives_tpl/adFaceTpl.html
@@ -36,6 +36,18 @@
                 </div>
             </div>
         </form>
-
+        <div class="fm-panel" style="margin-top: 10px">
+            <div class="content">
+                <ul class="fm-ul fm-ul-form">
+                    <li>
+                        <label>批量处理</label>
+                        <div class="batchButtonGroup">
+                            <a href="#" ng-click="batchAdminID('addAdminId')" class="zocial batchButton" title="为目行政区划内的Link赋 AdminID">赋AdminID（道路）</a>
+                            <a href="#" ng-click="batchAdminID('addAdminIdToPoi')" class="zocial batchButton" title="删除行政区划内的所选要素赋 ZoneID">赋AdminID（合并）</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
