--- a/scripts/components/column/tpls/englishName/photoEngNameTpl.html
+++ b/scripts/components/column/tpls/englishName/photoEngNameTpl.html
@@ -25,6 +25,7 @@
 
 </style>
 <div style="padding: 15px 0;color: white" ng-controller="photoEngNameCtrl">
+    <!-- 查询界面  -->
     <div ng-show="isQuery" class="queryPart">
         <!--待作业和待提交tabs页切换-->
         <div class="fm-tabs clearfix">
@@ -35,22 +36,20 @@
         <div class="clearfix" style="padding: 10px">
             <!--自定义条数的template-->
             <script type="text/ng-template" id="myPopoverTemplate.html">
-                <form role="form">
-                    <div class="form-group" ng-repeat="item in costomWorkNumEum">
-                        <div class="radio">
-                            <label>
-                                <input type="radio" name="selectNum" id="optionsRadios1" ng-checked="selectedNum==item.num" ng-click="selectNum(item,$index)"> <span ng-bind="item.desc"></span>
-                            </label>
-                        </div>
-                        <!--自定义输入框部分-->
-                        <div ng-if="inputIsShow&&$last" class="input-group">
-                            <input class="form-control" ng-model="item.num" type="text" />
-                            <span class="input-group-btn">
-                                <button ng-click="setInputValue(item.num)" class="btn btn-default" type="button">确认</button>
-                            </span>
-                        </div>
+                <div class="form-group" ng-repeat="item in costomWorkNumEum">
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="selectNum" id="optionsRadios1" ng-checked="selectedNum==item.num" ng-click="selectNum(item,$index)"> <span ng-bind="item.desc"></span>
+                        </label>
                     </div>
-                </form>
+                    <!--自定义输入框部分-->
+                    <div ng-if="inputIsShow&&$last" class="input-group">
+                        <input class="form-control" ng-model="item.num" type="text" />
+                        <span class="input-group-btn">
+                            <button ng-click="setInputValue(item.num)" class="btn btn-default" type="button">确认</button>
+                        </span>
+                    </div>
+                </div>
             </script>
             <!--自定义条数的template-->
             <div class="pull-left">
@@ -102,7 +101,6 @@
             </div>
         </div>
     </div>
-
     <!-- 编辑界面 -->
     <div ng-show="!isQuery" class="editPart" style="padding: 0 10px">
         <div class="fm-panel">
@@ -203,7 +201,6 @@
             </div>
         </div>
     </div>
-
     <!--查询界面批处理弹框()-->
     <div ng-show="batchWorkIsOpen">
         <div class="div-float" style="top:80px;left:120px;border-radius:5px;">
@@ -250,7 +247,6 @@
             </div>
         </div>
     </div>
-
     <!-- 编辑界面批量作业弹框 -->
     <div ng-show="editBatchWorkIsOpen">
         <div class="div-float" style="top:80px;left:120px;border-radius:5px;" drag>
