--- a/scripts/components/road/tpls/attr_zone_tpl/zoneFaceTpl.html
+++ b/scripts/components/road/tpls/attr_zone_tpl/zoneFaceTpl.html
@@ -36,6 +36,19 @@
                 </div>
             </div>
         </form>
+        <div class="fm-panel">
+            <div class="content">
+                <ul class="fm-ul fm-ul-form">
+                    <li>
+                        <label>批量处理</label>
+                        <div class="batchButtonGroup">
+                            <a href="#" ng-click="setZoneID()" class="zocial batchButton" title="为目标Zone面内的道路赋 ZoneID">赋 ZoneID</a>
+                            <a href="#" ng-click="deleteZoneID()" class="zocial batchButton" title="为目标Zone面内的道路删除 ZoneID">删除 ZoneID</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
 
