--- a/scripts/components/road/tpls/attr_link_tpl/rwLinkTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/rwLinkTpl.html
@@ -58,7 +58,7 @@
                         <li>
                             <label>图幅编号</label>
                             <div>
-                                <input type="text" ng-model="rwLinkData.meshId" />
+                                <input type="text" ng-model="rwLinkData.meshId" class="chosen-disabled"  ng-disabled=true>
                             </div>
                         </li>
                         <li>
