--- a/scripts/components/column/tpls/chinaAddress/addrSplitTpl.html
+++ b/scripts/components/column/tpls/chinaAddress/addrSplitTpl.html
@@ -29,10 +29,10 @@
 				<div style="padding: 2px;" class="pull-left">
 					<button type="button" class="btn btn-shape btn-ls" ng-click="">查询</button>
 					<button type="button" class="btn btn-shape btn-ls" ng-click="">在线检查</button>
-					<button type="button" class="btn btn-shape btn-ls" ng-click="">批量作业</button>
+					<button type="button" class="btn btn-shape btn-ls" ng-click="batchWork();">批量作业</button>
 					<button type="button" class="btn btn-shape btn-ls" ng-if="workedFlag==2" ng-click="submitData();">提交数据</button>
 					<!--自定义编辑条数控制-->
-					<span role="button" popover-is-open="popoverIsOpen" popover-placement="bottom" uib-popover-template="customPopoverUrl" popover-title="每次作业条数:" class="fa fa-cog fa-lg pointer wordColorWhite"></span>
+					<span role="button" popover-is-open="popoverIsOpen" popover-placement="bottom" popover-trigger="outsideClick" uib-popover-template="customPopoverUrl" popover-title="每次作业条数:" class="fa fa-cog fa-lg pointer wordColorWhite"></span>
 				</div>
 				<div class="pull-right">
 					<input class="fm-search-control" type="text" ng-model="filters[searchType]" placeholder="搜索"/>
@@ -50,6 +50,7 @@
 					</div>
 				</div>
 			</div>
+			<!-- 查询列表页面 -->
 			<div class="fm-fitsize dark scroll-styled" style="top:64px;color: white;">
 				<table ng-table-dynamic="tableParams with cols" class="table table-condensed table-bordered">
 					<colgroup>
@@ -67,9 +68,14 @@
 				</table>
 			</div>
 		</div>
-		<!-- 高级搜索 -->
-		<!--<div class="div-float" style="top:80px;left:120px;border-radius:5px;" drag>
+	</div>
+	<!-- 批量作业 -->
+	<div ng-show="batchWorkIsOpen">
+		<div class="div-float" style="top:80px;left:120px;border-radius:5px;" drag>
+			<button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeBatchModal()"><span>&times;</span></button>
+			<button type="button"  drag-handle class="close fa fa-arrows" style="padding:7px;font-size:16px;color:white;opacity:1;" title="拖拽"></button>
 			<div class="fm-panel" style="margin:0px;width:330px;">
+				<!-- <div style="border-bottom: 1px solid #ddd;"></div> -->
 				<div class="fm-tab" style="padding:0px;margin: 0px;">
 					<a href="#" class="tab" ng-class="{1:'active'}[batchFlag]" ng-click="batchTabs(1)">&nbsp;&nbsp;替换&nbsp;&nbsp;</a>
 					<a href="#" class="tab" ng-class="{2:'active'}[batchFlag]" ng-click="batchTabs(2)">高级搜索</a>
@@ -81,7 +87,7 @@
 								<label>字段:</label>
 								<div>
 									<select class="fm-control"  style="width:200px;" ng-model="batchParam.batchField"
-											placeholder_text_single="'&#45;&#45;请选择&#45;&#45;'"
+											placeholder_text_single="'--请选择--'"
 											ng-options="value.id as value.label for value in batchOpt"
 											ng-change="changeField($event, this)">
 									</select>
@@ -96,7 +102,7 @@
 							<li ng-show="extractEle">
 								<label>替换为:</label>
 								<div>
-									<input type="text" class="fm-control" style="width:200px;" ng-model="admin">
+									<input type="text" class="fm-control" style="width:200px;" ng-model="batchParam.replaceTo">
 								</div>
 							</li>
 						</ul>
@@ -109,7 +115,51 @@
 					<button type="button" class="btn btn-main" ng-show="searchBtn" ng-click="searchWork()" style="margin:6px 8px">搜索作业</button>
 				</div>
 			</div>
-		</div>-->
+		</div>
+	</div>
+	<!-- 编辑界面批量作业 -->
+	<div ng-show="editBatchWorkIsOpen">
+		<div class="div-float" style="top:80px;left:120px;border-radius:5px;z-index:10000;" drag>
+			<button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeEditBatchModal();"><span>&times;</span></button>
+			<button type="button"  drag-handle class="close fa fa-arrows" style="padding:7px;font-size:16px;color:white;opacity:1;" title="拖拽"></button>
+			<div class="fm-panel" style="margin:0px;width:330px;">
+				<div class="title">批量作业</div>
+				<div class="content" >
+					<div style="height:200px;">
+						<ul class="fm-ul fm-ul-form">
+							<li>
+								<label>字段:</label>
+								<div>
+									<select class="fm-control"  style="width:200px;" ng-model="batchParam.batchField"
+											placeholder_text_single="'--请选择--'"
+											ng-options="value.id as value.label for value in replaceOpt"
+											ng-change="changeField($event, this)" ng-class="{true:'chosen-disabled'}[editDisable]" ng-disabled="editDisable">
+									</select>
+								</div>
+							</li>
+							<li>
+								<label>搜索:</label>
+								<div>
+									<input type="text" class="fm-control" style="width:200px;" ng-model="batchParam.value" ng-class="{true:'chosen-disabled'}[editDisable]" ng-disabled="editDisable">
+								</div>
+							</li>
+							<li>
+								<label>替换为:</label>
+								<div>
+									<input type="text" class="fm-control" style="width:200px;" ng-model="batchParam.replaceTo" ng-class="{true:'chosen-disabled'}[editDisable]" ng-disabled="editDisable">
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div style="border-bottom: 1px solid #ddd;"></div>
+				<div style="text-align:right;">
+					<button type="button" class="btn btn-main" ng-click="next()" style="margin:6px 8px">下一个</button>
+					<button type="button" class="btn btn-main" ng-click="replaceOne()" style="margin:6px 8px">替换</button>
+					<button type="button" class="btn btn-main" ng-click="replaceAll()" style="margin:6px 8px">全部替换</button>
+				</div>
+			</div>
+		</div>
 	</div>
 	<!-- 表格编辑界面 -->
 	<div ng-class="{true:'testView',false:'testViewHiden'}[editPanelIsOpen]">
@@ -118,7 +168,7 @@
 			<div class="title">
 				<span style="cursor: pointer">地址作业</span>
 				<button type="button" class="close" ng-click="closeEditPanel()" style="color: white;opacity: 1;margin: -4px 0px;"><span>&times;</span></button>
-				<span class="pull-right" style="padding-right: 10px;">
+				<span class="pull-right" ng-click="editBatchWork();" style="padding-right: 10px;">
 					<i class="fa fa fa-file-text-o fa-lg pointer wordColorWhite" ></i>
 				</span>
 				<span class="pull-right" uib-popover-template="editModelUrl" popover-is-open="editModelIsOpen" popover-trigger="outsideClick" popover-placement="bottom" style="padding-right: 10px;">
@@ -133,7 +183,7 @@
 			</div>
 			<div>
 				<div class="fm-fitsize dark scroll-styled tablePosition" style="top:30px;color: white;">
-					<table ng-table-dynamic="editTable with edit.editCols" class="table table-condensed table-bordered">
+					<table ng-table-dynamic="editTable with edit.editCols" class="table table-condensed table-bordered poi-list">
 						<colgroup>
 							<col ng-repeat="col in edit.editCols | filter:{show: true}"  width="{{col.width || '50'}}"/>
 						</colgroup>
@@ -152,8 +202,8 @@
 			</div>
 		</div>
 		<!-- 行编辑 -->
-		<div class="div-float modelWindow" ng-show="rowEditPanelShow"></div>
-		<div class="div-float" ng-show="rowEditPanelShow" drag style="width:500px;top:50%;left: 50%;right: 50%;bottom: 50%;">
+		<div class="div-float modelWindow" ng-show="rowEditPanelShow"></div><!-- 背景遮罩层 -->
+		<div class="div-float" ng-show="rowEditPanelShow" drag style="width:500px;top:50%;left: 50%;right: 50%;bottom: 50%;"> <!-- 当行编辑 -->
 			<div style="height: 600px;width: 500px;margin-left: -250px;margin-top: -300px;">
 				<div class="fm-panel" >
 					<div class="title">
