--- a/scripts/components/column/tpls/chinaName/nameUnifyTpl.html
+++ b/scripts/components/column/tpls/chinaName/nameUnifyTpl.html
@@ -70,7 +70,6 @@
 			        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeBatchModal()"><span>&times;</span></button>
 			        <button type="button"  drag-handle class="close fa fa-arrows" style="padding:7px;font-size:16px;color:white;opacity:1;" title="拖拽"></button>
 			        <div class="fm-panel" style="margin:0px;width:330px;">
-			        <!-- <div style="border-bottom: 1px solid #ddd;"></div> -->
 					    <div class="fm-tab" style="padding:0px;margin: 0px;">
 							<a href="#" class="tab" ng-class="{1:'active'}[batchFlag]" ng-click="batchTabs(1)">&nbsp;&nbsp;替换&nbsp;&nbsp;</a>
 							<a href="#" class="tab" ng-class="{2:'active'}[batchFlag]" ng-click="batchTabs(2)">高级搜索</a>
@@ -81,7 +80,7 @@
 					                <li>
 					                    <label>字段:</label>
 					                    <div>
-					                    	<select class="fm-control"  style="width:200px;" ng-model="batchParam.batchField"
+					                    	<select class="fm-control"  ng-model="batchParam.batchField"
 					                                placeholder_text_single="'--请选择--'"
 					                                ng-options="value.id as value.label for value in batchOpt"
 					                                ng-change="changeField($event, this)">
