信号灯KG标志不可编辑

--- a/scripts/components/road/tpls/attr_trafficSignal_tpl/trafficSignalTpl.html
+++ b/scripts/components/road/tpls/attr_trafficSignal_tpl/trafficSignalTpl.html
@@ -66,15 +66,15 @@
                             <label class="control-label">KG 标志</label>
                             <div>
                                 <label>
-                                    <input type="radio" value=0 ng-model="trafficSignalData.kgFlag">
+                                    <input type="radio" value=0 ng-model="trafficSignalData.kgFlag" disabled>
                                     KG公用
                                 </label>
                                 <label>
-                                    <input type="radio" value=1 ng-model="trafficSignalData.kgFlag">
+                                    <input type="radio" value=1 ng-model="trafficSignalData.kgFlag" disabled>
                                     K专用
                                 </label>
                                 <label>
-                                    <input type="radio" value=2 ng-model="trafficSignalData.kgFlag">
+                                    <input type="radio" value=2 ng-model="trafficSignalData.kgFlag" disabled>
                                     G专用
                                 </label>
                             </div>
