--- a/scripts/components/road/tpls/attr_tollgate_tpl/tollGatePassageTpl.html
+++ b/scripts/components/road/tpls/attr_tollgate_tpl/tollGatePassageTpl.html
@@ -29,7 +29,7 @@
                                 </div>
                             </div>
                             <div class="date-body full-width">
-                                <div class="date-list col-md-6" ng-repeat="item in carData track by $index">
+                                <div class="date-list col-md-6" ng-repeat="item in carData[$index] track by $index">
                                     <div style="color:#ffffff;padding: 5px;" ng-bind="item.label">
                                     </div>
                                 </div>
