修改收费站bug

--- a/scripts/components/road/tpls/attr_tollgate_tpl/tollGatePassageTpl.html
+++ b/scripts/components/road/tpls/attr_tollgate_tpl/tollGatePassageTpl.html
@@ -23,7 +23,7 @@
                         <div class="date-well full-width">
                             <div class="date-head">
                                 <label>车辆类型</label>
-                                <div class="pull-right" style="display:inline-flex;color: #fff">{{passage.vehicle}}
+                                <div class="pull-right" style="display:inline-flex;color: #fff">
                                     <a style="cursor: pointer;"  ng-click="showPopover($event,$index)">添加</a>
                                     <input  type="checkbox" id="checkallow" ng-model="checkValue" ng-checked="checkValue" ng-click="checkViche()" >允许
                                 </div>
