人工确认英文名

--- a/scripts/components/column/tpls/englishName/chiEngNameTpl.html
+++ b/scripts/components/column/tpls/englishName/chiEngNameTpl.html
@@ -97,7 +97,7 @@
 					                <li ng-show="extractEle">
 					                    <label>替换为:</label>
 					                    <div>
-					                    	<input type="text" class="fm-control" style="width:200px;" ng-model="admin">
+					                    	<input type="text" class="fm-control" style="width:200px;" ng-model="batchParam.replaceTo">
 					                    </div>
 					                </li>
 					            </ul>
