--- a/less/editor.less
+++ b/less/editor.less
@@ -2053,4 +2053,8 @@ input[type="range"]::-webkit-slider-thumb {
   margin-bottom: -7px !important;
   width: 100% !important;
 }
-
+.child-list-ul{
+  border: 1px solid #fff;
+  margin-left: -10px;
+  padding: 3px;
+}
