--- a/scripts/components/road/tpls/attr_tollgate_tpl/tollGateTpl.html
+++ b/scripts/components/road/tpls/attr_tollgate_tpl/tollGateTpl.html
@@ -69,9 +69,13 @@
                     </div>
                     <div class="list-line"></div>
                 </li>
-                <li class="list-group-item" ng-repeat="namesItem in tollGateData.names">
-                    <label class="control-label fm-cursor" ng-click="showDetail('name',$index);" ng-bind="namesItem.name"></label>
-                    <i class="glyphicon glyphicon-remove-circle" ng-click="removeItem($index,'name')"></i>
+                <li class="list-group-item">
+                  <ul ng-repeat="namesItem in nameGroup | orderBy:'nameGrouppid'" class="list-group child-list-ul list-group-lg m-b-none">
+                    <li class="list-group-item" ng-repeat="item in namesItem">
+                      <label class="control-label fm-cursor" ng-click="showDetail('name',$index);" ng-bind="item.name"></label>
+                      <i class="glyphicon glyphicon-remove-circle" ng-click="removeItem($index,'name')"></i>
+                    </li>
+                  </ul>
                 </li>
             </ul>
         </div>
