--- a/scripts/components/road/tpls/attr_cross_tpl/rdCrossTpl.html
+++ b/scripts/components/road/tpls/attr_cross_tpl/rdCrossTpl.html
@@ -56,26 +56,64 @@
                             </div>
                         </li>
                     </ul>
-                    <ul class="fm-ul fm-ul-form">
+                </div>
+            </div>
+            <div class="fm-panel">
+                <div class="title">
+                    <div>组成Link（共 <span ng-bind="rdCrossData.links.length">0</span> 条）</div>
+                </div>
+                <div class="content">
+                    <ul class="fm-ul fm-ul-form" ng-repeat="cItem in rdCrossData.links">
                         <li>
+                            <label>Link{{$index+1}}号码</label>
                             <div>
-                                <a ng-click="addRdCrossName()" style="cursor: pointer;color:#FFF;">路口名称（共<span
-                                        ng-if="rdCrossData.names!=undefined">{{rdCrossData.names.length}}</span>条）</a>
-                            </div>
-                        </li>
-                    </ul>
-                    <ul class="fm-ul fm-ul-form">
-                        <li ng-repeat="cItem in rdCrossData.names">
-                            <div ng-click="showCrossNames(cItem)"><label class="control-label">{{cItem.name}}</label>
-                                <div id="crossnameSpan{{$index}}" class="glyphicon glyphicon-remove-sign"
-
-                                      ng-mouseover="changeColor($index)" ng-mouseleave="backColor($index)"
-                                      ng-click="minuscrossName($index)"></div>
+                                <input type="text" class="fm-control" ng-model="cItem.linkPid" disabled/>
                             </div>
                         </li>
                     </ul>
                 </div>
             </div>
+            <div class="fm-panel">
+                <div class="title">
+                    <div>组成Node（共 <span ng-bind="rdCrossData.nodes.length">0</span> 条）</div>
+                </div>
+                <div class="content">
+                    <ul class="fm-ul fm-ul-form" ng-repeat="cItem in rdCrossData.nodes">
+                        <li ng-if="cItem.isMain == 1">
+                            <label>主点号码</label>
+                            <div>
+                                <input type="text" class="fm-control" ng-model="cItem.nodePid" disabled/>
+                            </div>
+                        </li>
+                        <li ng-if="cItem.isMain == 0">
+                            <label>Node{{$index+1}}号码</label>
+                            <div>
+                                <input type="text" class="fm-control" ng-model="cItem.nodePid" disabled/>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="fm-panel">
+                <div class="title">
+                    <div><a ng-click="addRdCrossName()" style="cursor: pointer;color:#FFF;">名称信息（共<span
+                            ng-if="rdCrossData.names!=undefined">{{rdCrossData.names.length}}</span>条）</a></div>
+                </div>
+                <div class="content">
+                    <ul class="fm-ul fm-ul-form" ng-repeat="cItem in rdCrossData.names">
+                        <li>
+                            <div ng-click="showCrossNames(cItem)"><label
+                                    class="control-label">{{cItem.name}}</label>
+                                <div id="crossnameSpan{{$index}}" class="glyphicon glyphicon-remove-sign"
+
+                                     ng-mouseover="changeColor($index)" ng-mouseleave="backColor($index)"
+                                     ng-click="minuscrossName($index)"></div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
         </form>
     </div>
 </div>
