--- a/scripts/components/road/tpls/attr_link_tpl/speedOfConditionTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/speedOfConditionTpl.html
@@ -32,7 +32,7 @@
             <div class="inline">
                 <input type="text"
                        placeholder="0530" id="{{oridiData.rowid}}fromSpeedLimit"
-                       ng-model="oridiData.fromSpeedLimit">
+                       ng-model="oridiData.fromSpeedLimit" ng-disabled="rticDir ==3">
             </div>
         </li>
         <li class="list-group-item">
@@ -40,14 +40,14 @@
             <div class="inline">
                 <input type="text"
                        placeholder="0530" id="{{item.rowid}}toSpeedLimit"
-                       ng-model="oridiData.toSpeedLimit">
+                       ng-model="oridiData.toSpeedLimit" ng-disabled="rticDir ==2">
             </div>
         </li>
         <li class="list-group-item">
             <div><label class="control-label">顺向来源</label></div>
             <div class="inline">
                 <select ng-model="item.fromLimitSrc"
-                        ng-options="value.id as value.label for value in fromLimitSrcOption">
+                        ng-options="value.id as value.label for value in fromLimitSrcOption" ng-disabled="rticDir ==3">
                     <option>--</option>
                 </select>
             </div>
@@ -56,7 +56,7 @@
             <div><label class="control-label">逆向来源</label></div>
             <div class="inline">
                 <select ng-model="item.toLimitSrc"
-                        ng-options="value.id as value.label for value in fromLimitSrcOption">
+                        ng-options="value.id as value.label for value in fromLimitSrcOption" ng-disabled="rticDir ==2">
                     <option>--</option>
                 </select>
             </div>
