--- a/less/editor.less
+++ b/less/editor.less
@@ -2057,4 +2057,5 @@ input[type="range"]::-webkit-slider-thumb {
   border: 1px solid #fff;
   margin-left: -10px;
   padding: 3px;
+  padding-left: 0;
 }
