--- a/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
@@ -27,7 +27,7 @@
                       <div class="select2-option">
                           <select fm-edit-view class="fm-control" ng-model="selectedKind"
                                   no_results_text="'没有找到'"  placeholder_text_single="'--请选择--'" search_contains=true
-                                  ng-options="value as lable.kindName for (value, lable) in metaData.kindFormat"
+                                  ng-options="value as lable.kindName for (value, lable) in metaData.kindFormatPart"
                                   chosen ng-change="kindChange($event, this)" ng-disabled="isSpecialOperation">
                           </select>
                       </div>
