收费站名称信息

--- a/less/editor.less
+++ b/less/editor.less
@@ -2059,3 +2059,9 @@ input[type="range"]::-webkit-slider-thumb {
   padding: 3px;
   padding-left: 0;
 }
+.add-icon{
+  margin: 5px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 25px !important;
+}
