--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -2067,3 +2067,9 @@ a.batchButton {
   padding: 3px;
   padding-left: 0;
 }
+.add-icon {
+  margin: 5px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 25px !important;
+}
