收费站车辆类型bug修改

--- a/scripts/components/road/tpls/attr_tollgate_tpl/tollGatePassageTpl.html
+++ b/scripts/components/road/tpls/attr_tollgate_tpl/tollGatePassageTpl.html
@@ -25,7 +25,7 @@
                                 <label>车辆类型</label>
                                 <div class="pull-right" style="display:inline-flex;color: #fff">
                                     <a style="cursor: pointer;"  ng-click="showPopover($event,$index)">添加</a>
-                                    <input  type="checkbox" id="checkallow" ng-model="checkValue" ng-checked="checkValue" ng-click="changeAllowed($index)" >允许
+                                    <input  type="checkbox" id="checkallow" ng-model="checkValue" ng-checked="isAllowed[$index]" ng-click="changeAllowed($index)" >允许
                                 </div>
                             </div>
                             <div class="date-body full-width">
