--- a/scripts/components/road/tpls/attr_tollgate_tpl/tollGatePassageTpl.html
+++ b/scripts/components/road/tpls/attr_tollgate_tpl/tollGatePassageTpl.html
@@ -11,7 +11,7 @@
                             </select>
                         </div>
                     </li>
-                    <li ng-if="tollGateType == 1 ||tollGateType == 8 ||tollGateType == 9 ||tollGateType == 10">
+                    <li ng-if="tollGateInfo.type == 1 ||tollGateInfo.type == 8 ||tollGateInfo.type == 9 ||tollGateInfo.type == 10">
                         <label>领卡类型</label>
                         <div>
                             <select ng-model="passage.cardType" ng-change="changeCardType();" class="fm-control"
