--- a/scripts/components/poi/tpls/attr-deep/restaurantTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/restaurantTpl.html
@@ -25,7 +25,7 @@
                     </li>
                     <li>
                         <label>人均消费</label>
-                        <div><input type="number" class="fm-control" ng-model="poi.restaurants[0].avgCost"/></div>
+                        <div><input type="number" class="fm-control" min="0" ng-model="poi.restaurants[0].avgCost"/></div>
                     </li>
                     <li>
                         <label>营业时间</label>
