收费站名称编辑和保存

--- a/less/editor.less
+++ b/less/editor.less
@@ -2065,3 +2065,11 @@ input[type="range"]::-webkit-slider-thumb {
   cursor: pointer;
   font-size: 25px !important;
 }
+.list-add-icon{
+  position: absolute;
+  top: 5px;
+  right: 7px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px !important;
+}
