--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -2073,3 +2073,11 @@ a.batchButton {
   cursor: pointer;
   font-size: 25px !important;
 }
+.list-add-icon {
+  position: absolute;
+  top: 5px;
+  right: 7px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px !important;
+}
