--- a/scripts/components/tools/tpls/toolbar-map/specialOperAdvanceToolsTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/specialOperAdvanceToolsTpl.htm
@@ -2,4 +2,5 @@
     <button type="button" class="btn btn-xs btn-shape"  ng-class="{true:'active'}[roadNameBtnOpened]" ng-controller="specialOperAdvanceToolsCtl" ng-click="workPanelOpenClose()">道路作业</button>
     <button type="button" class="btn btn-xs btn-shape">图形作业</button>
     <button type="button" class="btn btn-xs btn-shape">其他</button>
+    <button type="button" class="btn btn-xs btn-shape"ng-class="{true:'active'}[rdLaneBtnOpened]" ng-controller="specialOperAdvanceToolsCtl"  ng-click="OpenRdlane()">测试</button>
 </div>
