--- a/scripts/components/road/tpls/attr_lane_tpl/rdLaneTpl.html
+++ b/scripts/components/road/tpls/attr_lane_tpl/rdLaneTpl.html
@@ -56,7 +56,9 @@
                         <li>
                             <label>车道标识</label>
                             <div>
-                                <input type="text" ng-model="laneInfo.laneForming"/>
+                                <select ng-model="laneInfo.laneForming"
+                                        ng-options="value.id as value.label for value in laneFormingObj">
+                                </select>
                             </div>
                         </li>
                         <li>
