解决收费站的收费类型控制领卡类型显示隐藏

--- a/scripts/components/road/tpls/attr_tollgate_tpl/tollGatePassageTpl.html
+++ b/scripts/components/road/tpls/attr_tollgate_tpl/tollGatePassageTpl.html
@@ -13,7 +13,7 @@
                         </div>
                     </li>
 
-                    <li ng-if="tollGateType.type == 1 ||tollGateType.type  == 8 ||tollGateType.type  == 9 ||tollGateType.type  == 10">
+                    <li ng-if="tollGateInfo.type == 1 ||tollGateInfo.type  == 8 ||tollGateInfo.type  == 9 ||tollGateInfo.type  == 10">
                         <label>领卡类型</label>
                         <div>
                             <select ng-model="passage.cardType" ng-change="changeCardType();" class="fm-control"
