解决初始化editor页面中蓝色提示框闪烁问题

--- a/less/editor.less
+++ b/less/editor.less
@@ -1649,6 +1649,7 @@ form input[type=checkbox].ng-dirty:before {
   .absolute-position(auto,auto,0,40px);
   width: 250px;
   z-index: 99;
+  display: none;
   .log-message {
     color: #fff;
     background-color: #49A7DA;
