--- a/scripts/components/road/tpls/attr_connexity_tpl/rdLaneConnexityTpl.html
+++ b/scripts/components/road/tpls/attr_connexity_tpl/rdLaneConnexityTpl.html
@@ -1,6 +1,6 @@
 <div ng-controller="rdLaneConnexityController" class="fm-component" oncontextmenu="self.event.returnValue=false">
     <div class="title">
-        车信ID
+        车信PID
         <span class="label label-info">{{lanesData.pid}}</span>
     </div>
     <div class="content scroll-styled dark" style="height:90%;">
